<resources>
    <string name="app_name">9Digits</string>
    <string name="name">Name *</string>
    <string name="email">E-Mail *</string>
    <string name="current_email">Current E-Mail</string>
    <string name="pass">Password *</string>
    <string name="confpass">Confirm Password *</string>
    <string name="register">Register</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="oldpass">Current Password *</string>
    <string name="newpass">New Password</string>
    <string name="confnewpass">Confirm New Password</string>
    <string name="edit">Edit</string>
    <string name="phone">Phone *</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="title_activity_mp3_files">Check Voicemail</string>
    <string name="title_activity_mp3_files2">Upload Greeting</string>
    <string name="read_file">This app needs access to your file storage so that it can read files.</string>
    <string name="search_hint">Search Here…</string>
    <string name="title_activity_setting">Call Routing</string>
    <string name="share_text"> BudinessApp  is an app to know before go Shopping .Market url: play.google.com/store/apps/details?id=com.firatnet.businessapp </string>
    <string name="title_activity_save_tts">Save Text-to-Speech</string>
    <string name="title_activity_search_business">Search For Business</string>
    <string name="title_activity_business_details">Business Details</string>
    <string name="title_activity_search_Mp3_files">Search for MP3 file</string>

    <string name="turn_speaker_on">Speaker ON</string>
    <string name="callee">client identity or phone number</string>
    <string name="callHint">Dial a client name or phone number. Leaving the field empty results in an automated response.</string>

    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>


    <!--<string name="app_name">Voice Quickstart</string>-->
    <!--<string name="turn_speaker_on">Speaker ON</string>-->
    <!--<string name="callee">client identity or phone number</string>-->
    <!--<string name="callHint">Dial a client name or phone number. Leaving the field empty results in an automated response.</string>-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <!--<string name="register">Register</string>-->
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_having_account">Already Having an Account?</string>
    <string name="log_in">Log In</string>
    <string name="not_having_account">Not Having an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="headline_name">Find Cross Promotion Partner</string>
    <string name="make_call">Make Call</string>
    <string name="home">Home</string>
    <string name="check_voicemail">Check Voicemail</string>
    <string name="upload_greeting">Upload Greeting</string>
    <string name="text_to_speech">Text-to-Speech</string>
    <string name="call_routing">Call Routing</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="logout2">LOGOUT</string>
    <string name="about_us">About us</string>
    <string name="default_tts">Text should be Thanks for Calling ABC Company, please hold the line while we are connecting </string>
    <string name="add_new_business">Add New Bussinss</string>
    <string name="play_voice">Play Voice</string>
    <string name="loading">Loading, . . .</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="privacy_policy_t"><![CDATA[ Privacy Policy ]]></string>
    <string name="call_log_manager">Call Log Manager</string>
    <string name="no_missed_call">No Missed Call</string>
    <string name="no_incoming_call">No Incoming Call</string>
    <string name="no_outgoing_call">No Outgoing Call</string>
    <string name="no_log">No Log</string>
    <string name="snack_bar_undo">Undo</string>
    <string name="premium">Premium Plan</string>
</resources>
