<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_voice"
            android:icon="@drawable/ic_call_black_24dp"
            android:title="@string/make_call" />
        <item
            android:id="@+id/nav_mp3"
            android:icon="@drawable/ic_play_black"
            android:title="@string/check_voicemail" />
        <item
            android:id="@+id/nav_mp3_2"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/upload_greeting" />

        <item
            android:id="@+id/nav_TTS"
            android:icon="@drawable/ic_edit"
            android:title="@string/text_to_speech" />

        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/call_routing" />

        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_aboutus"
            android:title="@string/about_us" />
    </group>

    <!--<item android:title="@string/communicate">-->
        <group>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <!--<item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />-->
        </group>
    <!--</item>-->

    <!--<item android:title="@string/logout2">-->
        <group>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit"
                android:title="@string/logout" />

        </group>
    <!--</item>-->

</menu>
