<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    tools:context=".activities.EditMyProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="15dp">

        <!--<ImageView-->
        <!--android:id="@+id/imageView"-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="100dp"-->
        <!--android:scaleType="centerCrop"-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_margin="30dp"-->
        <!--android:contentDescription="@string/register"-->
        <!--android:src="@drawable/ic_logo" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_ly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/customborder"
            android:textColorHint="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="2dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_ly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/customborder"
            android:textColorHint="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:hint="@string/phone"
                android:inputType="textPersonName"
                android:padding="2dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/old_email_ly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/customborder"
            android:textColorHint="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/old_email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:hint="@string/current_email"
                android:inputType="textEmailAddress"
                android:padding="2dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_ly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/customborder"
            android:textColorHint="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="2dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/old_pw_signup_ly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/customborder"
            android:textColorHint="@color/colorPrimaryDark"
            app:passwordToggleContentDescription="description"
            app:passwordToggleDrawable="@drawable/check"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/old_pw_signup_et"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:hint="@string/oldpass"
                android:inputType="textPassword"
                android:maxLength="44"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_pw_et_ly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/customborder"
            android:textColorHint="@color/colorPrimaryDark"
            app:passwordToggleContentDescription="description"
            app:passwordToggleDrawable="@drawable/check"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_pw_et"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:hint="@string/newpass"
                android:inputType="textPassword"
                android:maxLength="44"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/conf_new_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/customborder"
            android:textColorHint="@color/colorPrimaryDark"
            app:passwordToggleContentDescription="description"
            app:passwordToggleDrawable="@drawable/check"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/conf_new_pw_et"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:hint="@string/confnewpass"
                android:inputType="textPassword"
                android:maxLength="44"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/edit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/roundedbutton"
            android:padding="5dp"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/error2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorError" />
    </LinearLayout>
</ScrollView>