<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                android:layout_margin="30dp"
                android:src="@drawable/ic_logo" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/name_ly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/colorPrimaryDark"
                android:background="@drawable/customborder">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/name"
                    android:gravity="center"
                    android:inputType="textPersonName"
                    android:padding="2dp"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_ly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/colorPrimaryDark"
                android:background="@drawable/customborder">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/email"
                    android:gravity="center"
                    android:inputType="textEmailAddress"
                    android:padding="2dp"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/pw_signup_ly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/customborder"
                android:textColorHint="@color/colorAccent"
                app:passwordToggleContentDescription="description"
                app:passwordToggleDrawable="@drawable/check"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/pw_signup_et"
                    android:layout_width="match_parent"
                    android:layout_height="27dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp"
                    android:maxLength="44"
                    android:background="@android:color/transparent"
                    android:hint="@string/pass"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/confpw_signup_ly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/customborder"
                android:textColorHint="@color/colorAccent"
                app:passwordToggleContentDescription="description"
                app:passwordToggleDrawable="@drawable/check"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/confpw_signup_et"
                    android:layout_width="match_parent"
                    android:layout_height="27dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp"
                    android:maxLength="44"
                    android:background="@android:color/transparent"
                    android:hint="@string/confpass"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark" />
            </android.support.design.widget.TextInputLayout>

            <Button  android:id="@+id/btnSignup"
                android:background="@drawable/roundedbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:textColor="@color/white"
                android:text="@string/register"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/error2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorError"
                />
        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>